--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.0.2",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^9.4.3",
     "@nestjs/core": "^9.4.3",
     "@nestjs/graphql": "^10.0.2",
     "@nestjs/platform-express": "^9.4.3",
-    "@nestjs/apollo": "^10.0.2",
     "apollo-server-express": "^3.6.0",
     "graphql": "^15.0.0",
     "graphql-tools": "^9.0.1",
+    "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -39,6 +40,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^27.0.0",
     "@types/node": "^20.3.1",
+    "@types/node-fetch": "^2.6.11",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
